--- a/driver/index.html
+++ b/driver/index.html
@@ -99,6 +99,6 @@
         </form>
       </div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="assets/js/login.js"></script>
   </body>
 </html>
