--- a/driver/request.html
+++ b/driver/request.html
@@ -15,65 +15,109 @@
   </head>
 
   <body class="bg-gray-50 min-h-screen pb-24">
-    <!-- Navbar -->
-    <header
-      class="bg-[#5B2EFF] text-white px-6 py-4 flex justify-between items-center"
-    >
-      <div class="flex items-center space-x-2">
+    <!-- Konten yang akan diblur -->
+    <div id="mainContent">
+      <!-- Navbar -->
+      <header
+        class="bg-[#5B2EFF] text-white px-6 py-4 flex justify-between items-center"
+      >
+        <div class="flex items-center space-x-2">
+          <img
+            src="assets/img/RescueGo-SideBarLogo.svg"
+            alt="RescueGo Logo"
+            class="h-8"
+          />
+          <span class="font-bold text-lg">RescueGo</span>
+        </div>
         <img
-          src="assets/img/RescueGo-SideBarLogo.svg"
-          alt="RescueGo Logo"
-          class="h-8"
+          src="assets/img/AvatarProfile-MockUp.svg"
+          alt="Avatar"
+          class="h-10 w-10 rounded-full"
         />
-        <span class="font-bold text-lg">RescueGo</span>
-      </div>
-      <img
-        src="assets/img/AvatarProfile-MockUp.svg"
-        alt="Avatar"
-        class="h-10 w-10 rounded-full"
-      />
-    </header>
+      </header>
 
-    <!-- Main Content -->
-    <main class="px-6 mt-6">
-      <h1 class="text-sm text-gray-700 font-semibold mb-4">Permintaan</h1>
+      <!-- Main Content -->
+      <main class="px-6 mt-6">
+        <h1 class="text-sm text-gray-700 font-semibold mb-4">Permintaan</h1>
 
-      <!-- List Permintaan -->
-      <div class="space-y-3">
-        <button
-          class="open-detail bg-white rounded-xl shadow flex items-center justify-between p-4 w-full hover:bg-gray-100"
-        >
-          <div class="flex items-center space-x-2">
-            <span class="text-[#5B2EFF]">⚠️</span>
-            <p class="text-sm font-semibold text-[#5B2EFF]">
-              Abdul Wahid - Kecelakaan - RSUD Jakarta
-            </p>
-          </div>
-          <span class="text-[#5B2EFF] text-xl">›</span>
-        </button>
+        <!-- List Permintaan -->
+        <div class="space-y-3">
+          <button
+            class="open-detail bg-white rounded-xl shadow flex items-center justify-between p-4 w-full hover:bg-gray-100"
+          >
+            <div class="flex items-center space-x-2">
+              <span class="text-[#5B2EFF]">⚠️</span>
+              <p class="text-sm font-semibold text-[#5B2EFF]">
+                Abdul Wahid - Kecelakaan - RSUD Jakarta
+              </p>
+            </div>
+            <span class="text-[#5B2EFF] text-xl">›</span>
+          </button>
 
-        <button
-          class="open-detail bg-white rounded-xl shadow flex items-center justify-between p-4 w-full hover:bg-gray-100"
-        >
-          <div class="flex items-center space-x-2">
-            <span class="text-[#5B2EFF]">✔️</span>
-            <p class="text-sm font-semibold text-[#5B2EFF]">
-              Abdul Wahab - Kecelakaan - RSUD Jakarta
-            </p>
-          </div>
-          <span class="text-[#5B2EFF] text-xl">›</span>
-        </button>
-      </div>
-    </main>
+          <button
+            class="open-detail bg-white rounded-xl shadow flex items-center justify-between p-4 w-full hover:bg-gray-100"
+          >
+            <div class="flex items-center space-x-2">
+              <span class="text-[#5B2EFF]">✔️</span>
+              <p class="text-sm font-semibold text-[#5B2EFF]">
+                Abdul Wahab - Kecelakaan - RSUD Jakarta
+              </p>
+            </div>
+            <span class="text-[#5B2EFF] text-xl">›</span>
+          </button>
+        </div>
+      </main>
+    </div>
+
+    <!-- Bottom Navigation -->
+    <nav
+      class="fixed bottom-0 left-0 right-0 bg-white shadow-inner px-6 py-3 flex justify-between items-center border-t z-40"
+    >
+      <a
+        href="dashboard.html"
+        class="flex flex-col items-center text-gray-500 hover:text-[#5B2EFF]"
+      >
+        <img src="assets/img/Home-Button.svg" alt="Beranda" class="h-6 w-6" />
+        <span class="text-xs mt-1">Beranda</span>
+      </a>
+      <a href="request.html" class="flex flex-col items-center text-[#5B2EFF]">
+        <div class="bg-[#EFE8FF] p-2 rounded-full">
+          <img
+            src="assets/img/Request-Button-Active.svg"
+            alt="Request"
+            class="h-6 w-6"
+          />
+        </div>
+        <span class="text-xs mt-1 font-semibold">Request</span>
+      </a>
+      <a
+        href="vehicle.html"
+        class="flex flex-col items-center text-gray-500 hover:text-[#5B2EFF]"
+      >
+        <img
+          src="assets/img/Vehicle-Button.svg"
+          alt="Kendaraan"
+          class="h-6 w-6"
+        />
+        <span class="text-xs mt-1">Kendaraan</span>
+      </a>
+      <a
+        href="profile.html"
+        class="flex flex-col items-center text-gray-500 hover:text-[#5B2EFF]"
+      >
+        <img src="assets/img/Profile-Button.svg" alt="Profil" class="h-6 w-6" />
+        <span class="text-xs mt-1">Profil</span>
+      </a>
+    </nav>
 
     <!-- Modal Detail -->
     <div
       id="requestDetailModal"
-      class="fixed inset-0 bg-black/40 backdrop-blur-sm hidden z-50 transition-opacity"
+      class="fixed inset-0 bg-black/40 backdrop-blur-sm hidden z-50 flex items-start justify-center pt-24"
     >
       <div
         id="modalBox"
-        class="bg-white rounded-xl shadow-lg w-full max-w-2xl p-6 mx-auto mt-24 opacity-0 scale-95 transition-all duration-200"
+        class="bg-white rounded-xl shadow-lg w-full max-w-md p-6 opacity-0 scale-95 transition-all duration-200 relative"
       >
         <!-- Header -->
         <div class="flex justify-between items-center mb-4">
@@ -134,47 +178,6 @@
         </div>
       </div>
     </div>
-
-    <!-- Bottom Navigation -->
-    <nav
-      class="fixed bottom-0 left-0 right-0 bg-white shadow-inner px-6 py-3 flex justify-between items-center border-t z-50"
-    >
-      <a
-        href="dashboard.html"
-        class="flex flex-col items-center text-gray-500 hover:text-[#5B2EFF]"
-      >
-        <img src="assets/img/Home-Button.svg" alt="Beranda" class="h-6 w-6" />
-        <span class="text-xs mt-1">Beranda</span>
-      </a>
-      <a href="request.html" class="flex flex-col items-center text-[#5B2EFF]">
-        <div class="bg-[#EFE8FF] p-2 rounded-full">
-          <img
-            src="assets/img/Request-Button-Active.svg"
-            alt="Request"
-            class="h-6 w-6"
-          />
-        </div>
-        <span class="text-xs mt-1 font-semibold">Request</span>
-      </a>
-      <a
-        href="vehicle.html"
-        class="flex flex-col items-center text-gray-500 hover:text-[#5B2EFF]"
-      >
-        <img
-          src="assets/img/Vehicle-Button.svg"
-          alt="Kendaraan"
-          class="h-6 w-6"
-        />
-        <span class="text-xs mt-1">Kendaraan</span>
-      </a>
-      <a
-        href="profile.html"
-        class="flex flex-col items-center text-gray-500 hover:text-[#5B2EFF]"
-      >
-        <img src="assets/img/Profile-Button.svg" alt="Profil" class="h-6 w-6" />
-        <span class="text-xs mt-1">Profil</span>
-      </a>
-    </nav>
 
     <!-- Script -->
     <script src="assets/js/request-detail-modal.js"></script>
