--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -34,8 +34,8 @@
         <nav class="nav-links">
           <a href="dashboard.html" class="nav-link active">Dashboard</a>
           <a href="reservation.html" class="nav-link">Reservasi</a>
-          <a href="#" class="nav-link">Supir</a>
-          <a href="#" class="nav-link">Ambulans</a>
+          <a href="supir.html" class="nav-link">Supir</a>
+          <a href="ambulans.html" class="nav-link">Ambulans</a>
           <a href="#" class="nav-link">Perbaikan</a>
           <a href="#" class="nav-link">Pengguna</a>
         </nav>
