--- a/admin/ambulance_screen.html
+++ b/admin/ambulance_screen.html
@@ -4,25 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ambulans - RescueGo</title>
+    <link rel="icon" href="assets/img/RescueGo-SideBarLogo.svg" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- Navbar -->
     <header class="navbar">
       <div class="navbar-left">
-        <img
-          src="assets/images/RescueGo-SideBarLogo.svg"
-          alt="Logo"
-          class="logo"
-        />
+        <img src="assets/img/RescueGo-SideBarLogo.svg" alt="Logo" class="logo" />
         <span class="brand-text">RescueGo</span>
       </div>
       <div class="navbar-right">
-        <img
-          src="assets/images/AvatarProfile-MockUp.svg"
-          alt="Profil"
-          class="profile-pic"
-        />
+        <img src="assets/img/AvatarProfile-MockUp.svg" alt="Profil" class="profile-pic" />
         <button class="burger-menu" id="burgerMenu">&#9776;</button>
       </div>
     </header>
@@ -32,15 +25,15 @@
       <!-- Sidebar -->
       <aside class="sidebar sidebar-white">
         <nav class="nav-links">
-          <a href="dashboard.html" class="nav-link">Dashboard</a>
-          <a href="reservation.html" class="nav-link">Reservasi</a>
-          <a href="supir.html" class="nav-link">Supir</a>
-          <a href="ambulans.html" class="nav-link active">Ambulans</a>
-          <a href="#" class="nav-link">Perbaikan</a>
-          <a href="#" class="nav-link">Pengguna</a>
+          <a href="dashboard_screen.html" class="nav-link">Dashboard</a>
+          <a href="reservation_screen.html" class="nav-link">Reservasi</a>
+          <a href="driver_screen.html" class="nav-link">Supir</a>
+          <a href="ambulance_screen.html" class="nav-link active">Ambulans</a>
+          <a href="maintenance_screen.html" class="nav-link">Perbaikan</a>
+          <a href="user_screen.html" class="nav-link">Pengguna</a>
         </nav>
         <div class="sidebar-footer">
-          <a href="index.html" class="nav-link logout" id="logoutBtn">Keluar</a>
+          <a href="login_screen.html" class="nav-link logout" id="logoutBtn">Keluar</a>
           <small class="version">RescueGo versi 1.0</small>
         </div>
       </aside>
@@ -84,57 +77,57 @@
 
     <!-- Add Ambulance Screen -->
     <div class="popup-overlay" id="addAmbulanceOverlay">
-    <div class="popup add-ambulance-popup">
+      <div class="popup add-ambulance-popup">
         <h3 class="popup-title">Tambah Baru</h3>
         <form id="addAmbulanceForm" class="ambulance-form">
-        <div class="form-grid">
+          <div class="form-grid">
             <div class="form-group">
-            <label>Nomor Polisi</label>
-            <input type="text" name="license_plate" />
+              <label>Nomor Polisi</label>
+              <input type="text" name="license_plate" />
             </div>
             <div class="form-group">
-            <label>Tahun</label>
-            <input type="number" name="year" />
+              <label>Tahun</label>
+              <input type="number" name="year" />
             </div>
             <div class="form-group">
-            <label>Tipe</label>
-            <input type="text" name="type" />
+              <label>Tipe</label>
+              <input type="text" name="type" />
             </div>
             <div class="form-group">
-            <label>Kapasitas</label>
-            <input type="number" name="capacity" />
+              <label>Kapasitas</label>
+              <input type="number" name="capacity" />
             </div>
             <div class="form-group">
-            <label>Brand</label>
-            <input type="text" name="brand" />
+              <label>Brand</label>
+              <input type="text" name="brand" />
             </div>
             <div class="form-group">
-            <label>Kota</label>
-            <input type="text" name="city" />
+              <label>Kota</label>
+              <input type="text" name="city" />
             </div>
             <div class="form-group">
-            <label>Model</label>
-            <input type="text" name="model"/>
+              <label>Model</label>
+              <input type="text" name="model" />
             </div>
             <div class="form-group">
-            <label>Fasilitas</label>
-            <input type="text" name="facilities" />
+              <label>Fasilitas</label>
+              <input type="text" name="facilities" />
             </div>
-        </div>
-        <div class="form-group center">
+          </div>
+          <div class="form-group center">
             <label>Status</label>
             <select name="status">
-            <option value="aktif">Aktif</option>
-            <option value="nonaktif">Tidak Aktif</option>
-            <option value="perbaikan">Dalam Perbaikan</option>
+              <option value="aktif">Aktif</option>
+              <option value="nonaktif">Tidak Aktif</option>
+              <option value="perbaikan">Dalam Perbaikan</option>
             </select>
-        </div>
-        <div class="form-actions">
+          </div>
+          <div class="form-actions">
             <button type="button" class="btn-outline" id="cancelAddAmbulance">Batal</button>
             <button type="submit" class="btn-primary">Simpan</button>
-        </div>
+          </div>
         </form>
-    </div>
+      </div>
     </div>
 
     <!-- Detail Ambulan -->
@@ -152,7 +145,7 @@
           </div>
           <div class="column">
             <h4 class="invisible">Detail Lanjutan</h4>
-            <p>Tahun: 2021 </p>
+            <p>Tahun: 2021</p>
             <p>Kapasitas: 1</p>
             <p>Kota: Jakarta Pusat</p>
             <p>Fasilitas: P3K</p>
@@ -164,36 +157,10 @@
     <!-- Logout modal -->
     <div id="logoutModal">
       <div id="logoutModalContent">
-        <h2 style="text-align: center; font-size: 18px; margin-bottom: 16px">
-          Apakah Anda yakin ingin keluar?
-        </h2>
+        <h2 style="text-align: center; font-size: 18px; margin-bottom: 16px">Apakah Anda yakin ingin keluar?</h2>
         <div style="display: flex; justify-content: space-between; gap: 10px">
-          <button
-            id="cancelLogout"
-            style="
-              flex: 1;
-              padding: 8px;
-              border: 1px solid #5b2eff;
-              background: #fff;
-              color: #5b2eff;
-              border-radius: 6px;
-            "
-          >
-            Batal
-          </button>
-          <button
-            id="confirmLogout"
-            style="
-              flex: 1;
-              padding: 8px;
-              background: #5b2eff;
-              color: white;
-              border: none;
-              border-radius: 6px;
-            "
-          >
-            Keluar
-          </button>
+          <button id="cancelLogout" style="flex: 1; padding: 8px; border: 1px solid #5b2eff; background: #fff; color: #5b2eff; border-radius: 6px">Batal</button>
+          <button id="confirmLogout" style="flex: 1; padding: 8px; background: #5b2eff; color: white; border: none; border-radius: 6px">Keluar</button>
         </div>
       </div>
     </div>
