finalizing ui - driver

--- a/driver/request_screen.html
+++ b/driver/request_screen.html
@@ -30,30 +30,29 @@
       <main class="py-8 px-8 md:px-24 lg:px-42">
         <h1 class="text-center text-3xl font-bold text-[#5B2EFF] mb-6">Permintaan</h1>
 
-        <!-- List Permintaan -->
-        <div class="bg-white rounded-xl shadow py-8 px-8 flex items-center justify-between mb-2">
+        <button type="button" class="open-detail bg-white rounded-xl shadow py-8 px-8 flex items-center justify-between mb-2 w-full text-left transition hover:bg-gray-100 cursor-pointer">
           <div class="flex items-center space-x-12">
             <span class="text-yellow-500 text-2xl">⚠️</span>
-            <a href="request-detail.html" class="text-xl font-semibold text-[#5B2EFF] hover:underline">Abdul Wahid - Kecelakaan - RSUD Jakarta</a>
+            <span class="text-xl font-semibold text-[#5B2EFF]">Abdul Wahid - Kecelakaan - RSUD Jakarta</span>
           </div>
           <span class="text-[#5B2EFF] text-2xl">›</span>
-        </div>
+        </button>
 
-        <div class="bg-white rounded-xl shadow py-8 px-8 flex items-center justify-between mb-2">
+        <button type="button" class="open-detail bg-white rounded-xl shadow py-8 px-8 flex items-center justify-between mb-2 w-full text-left transition hover:bg-gray-100 cursor-pointer">
           <div class="flex items-center space-x-8">
             <span class="text-yellow-500 text-2xl">✔️</span>
-            <a href="request-detail.html" class="text-xl font-semibold text-[#5B2EFF] hover:underline">Abdul Wahab - Kecelakaan - RSUD Jakarta</a>
+            <span class="text-xl font-semibold text-[#5B2EFF]">Abdul Wahab - Kecelakaan - RSUD Jakarta</span>
           </div>
           <span class="text-[#5B2EFF] text-2xl">›</span>
-        </div>
+        </button>
 
-        <div class="bg-white rounded-xl shadow py-8 px-8 flex items-center justify-between mb-2">
+        <button type="button" class="open-detail bg-white rounded-xl shadow py-8 px-8 flex items-center justify-between mb-2 w-full text-left transition hover:bg-gray-100 cursor-pointer">
           <div class="flex items-center space-x-8">
             <span class="text-yellow-500 text-2xl">✔️</span>
-            <a href="request-detail.html" class="text-xl font-semibold text-[#5B2EFF] hover:underline">Abdul Wahab - Kecelakaan - RSUD Jakarta</a>
+            <span class="text-xl font-semibold text-[#5B2EFF]">Abdul Wahab - Kecelakaan - RSUD Jakarta</span>
           </div>
           <span class="text-[#5B2EFF] text-2xl">›</span>
-        </div>
+        </button>
       </main>
     </div>
 
@@ -122,6 +121,6 @@
     </div>
 
     <!-- Script -->
-    <script src="assets/js/request-detail-modal.js"></script>
+    <script src="js/request-detail-modal.js"></script>
   </body>
 </html>
