--- a/driver/dashboard_screen.html
+++ b/driver/dashboard_screen.html
@@ -47,13 +47,13 @@
       <!-- Permintaan Saat Ini -->
       <section>
         <h2 class="text-md font-semibold text-gray-700 mb-2">Permintaan saat ini</h2>
-        <div class="bg-white rounded-xl shadow py-8 px-8 flex items-center justify-between mb-2">
-          <div class="flex items-center space-x-8">
+        <button type="button" class="open-detail bg-white rounded-xl shadow py-8 px-8 flex items-center justify-between mb-2 w-full text-left transition hover:bg-gray-100 cursor-pointer">
+          <div class="flex items-center space-x-12">
             <span class="text-yellow-500 text-2xl">⚠️</span>
-            <a href="request-detail.html" class="text-xl font-semibold text-[#5B2EFF] hover:underline"> Abdul Wahid - Kecelakaan - RSUD Jakarta </a>
+            <span class="text-xl font-semibold text-[#5B2EFF]">Abdul Wahid - Kecelakaan - RSUD Jakarta</span>
           </div>
           <span class="text-[#5B2EFF] text-2xl">›</span>
-        </div>
+        </button>
         <div class="text-right mt-2">
           <a href="request_screen.html" class="text-md text-[#5B2EFF] font-medium hover:underline">Lihat lainnya</a>
         </div>
@@ -84,7 +84,49 @@
         <span class="text-xs mt-1">Profil</span>
       </a>
     </nav>
+    <!-- Modal Detail -->
+    <div id="requestDetailModal" class="fixed inset-0 bg-black/40 backdrop-blur-sm hidden z-50 flex items-start justify-center pt-24">
+      <div id="modalBox" class="bg-white rounded-xl shadow-lg w-full max-w-md p-6 opacity-0 scale-95 transition-all duration-200 relative">
+        <!-- Header -->
+        <div class="flex justify-between items-center mb-4">
+          <h2 class="text-lg font-bold text-[#5B2EFF] mx-auto">Detail</h2>
+          <button id="closeDetail" class="absolute right-4 text-[#5B2EFF] text-2xl font-bold hover:scale-110">✕</button>
+        </div>
 
-    <script src="assets/js/nav-active.js"></script>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 border-b pb-4">
+          <!-- Pasien -->
+          <div>
+            <h3 class="text-sm text-gray-700 font-bold mb-2">Pasien</h3>
+            <p class="text-sm"><span class="font-semibold">Nama:</span> Abdul Wahid</p>
+            <p class="text-sm"><span class="font-semibold">Umur:</span> 35</p>
+            <p class="text-sm"><span class="font-semibold">Jenis Kelamin:</span> Laki-laki</p>
+            <p class="text-sm"><span class="font-semibold">Keterangan:</span> Kecelakaan</p>
+          </div>
+
+          <!-- Reservasi -->
+          <div>
+            <h3 class="text-sm text-gray-700 font-bold mb-2">Reservasi</h3>
+            <p class="text-sm"><span class="font-semibold">Supir:</span> Abdul Hasan</p>
+            <p class="text-sm"><span class="font-semibold">Kendaraan:</span> Toyota Hiace</p>
+            <p class="text-sm"><span class="font-semibold">Status:</span> Pending</p>
+            <p class="text-sm"><span class="font-semibold">Timestamp:</span> 14.30</p>
+          </div>
+        </div>
+
+        <!-- Update Status -->
+        <div class="mt-6 text-center">
+          <h3 class="text-sm text-gray-700 font-bold mb-2">Perbarui Status</h3>
+          <select class="border border-[#5B2EFF] text-[#5B2EFF] font-semibold rounded-md px-4 py-2">
+            <option>Pending</option>
+            <option>Diterima</option>
+            <option>Menuju Lokasi</option>
+            <option>Selesai</option>
+          </select>
+        </div>
+      </div>
+    </div>
+
+    <!-- Script -->
+    <script src="js/request-detail-modal.js"></script>
   </body>
 </html>
